Fixed navbar and body layout issues

--- a/client/src/app.css
+++ b/client/src/app.css
@@ -104,7 +104,7 @@
 
   footer {
     margin-top: 20px;
-    background-color: rgba(0, 0, 0, 0.699);
+    background-color: rgb(0, 0, 0);
     border-top: 2px var(--light) solid;
     align-items: center;
     width: 100vw;
